# myutils

./: .travis.yml  CMakeLists.txt  Fast_Corner_Detection_SOLUTION.ipynb  README.md
include/myutil/parser/: csv_parser.h  csv_parser_bak.h  string_parser.h
include/myutil/tl/: count_iterator.hpp  is_any.hpp  map_iterator.hpp
parser/: csv_parser.h  string_parser_test
test/: count_iterator_test.cpp  csv_test.cpp  is_any_test.cpp  map_iterator_test.cpp  serialization_test.cpp  string_parser_test.cpp
tl/: count_iterator.hpp  has_serialization.hpp  map_iterator_test
